--- a/app/src/main/res/layout/coil_game_fragment.xml
+++ b/app/src/main/res/layout/coil_game_fragment.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context="com.kitowcy.incrediblephysicsritual.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/main_placeholder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Tesla Coil game !"/>
 
 </RelativeLayout>
