--- a/app/src/main/res/layout/start_screen_fragment.xml
+++ b/app/src/main/res/layout/start_screen_fragment.xml
@@ -9,15 +9,39 @@
         android:id="@+id/main_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         android:src="@drawable/background" />
 
     <ImageView
-        android:id="@+id/main_button_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/button_play"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="75dp"
+        android:layout_marginTop="83dp"
+        android:layout_toStartOf="@+id/relativeLayout"
+        android:src="@drawable/button_add" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="137dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="60dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:src="@drawable/circle" />
+
+        <ImageView
+            android:id="@+id/main_button_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/button_play" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
