--- a/app/src/main/res/layout/question_base_fragment.xml
+++ b/app/src/main/res/layout/question_base_fragment.xml
@@ -52,6 +52,7 @@
         android:layout_margin="20dp">
 
         <TextView
+            android:id="@+id/question_text"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:gravity="center"
