--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,15 @@
     android:background="#d3d3d3"
     tools:context="com.kitowcy.incrediblephysicsritual.MainActivity">
 
-    <SeekBar
-        android:padding="10sp"
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <RelativeLayout
-        android:layout_below="@+id/seekBar"
         android:id="@+id/main_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10sp" />
 
 </RelativeLayout>
