no duplicates in answers

--- a/app/src/main/res/layout/question_base_fragment.xml
+++ b/app/src/main/res/layout/question_base_fragment.xml
@@ -68,4 +68,15 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/score_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        tools:text="20"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
