--- a/app/src/main/res/layout/start_screen_fragment.xml
+++ b/app/src/main/res/layout/start_screen_fragment.xml
@@ -45,4 +45,16 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/score_text_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
+        android:textSize="30sp"
+        tools:text="20" />
+
 </RelativeLayout>
