--- a/app/src/main/res/layout/start_screen_fragment.xml
+++ b/app/src/main/res/layout/start_screen_fragment.xml
@@ -58,4 +58,15 @@
         android:textSize="30sp"
         tools:text="20" />
 
+    <TextView
+        android:id="@+id/scoring_hint_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:gravity="end"
+        android:paddingBottom="5dp"
+        android:paddingEnd="5dp"
+        tools:text="Answer to 5 questions in raw to unlock next character!" />
+
 </RelativeLayout>
