--- a/app/src/main/res/layout/lost_fragment.xml
+++ b/app/src/main/res/layout/lost_fragment.xml
@@ -17,8 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="120dp"
         android:layout_marginEnd="120dp"
+        android:layout_marginRight="120dp"
         android:textColor="#000000"
         android:textSize="30sp"
         tools:text="Score: 50" />
