--- a/app/src/main/res/layout/question_base_fragment.xml
+++ b/app/src/main/res/layout/question_base_fragment.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <LinearLayout
@@ -72,11 +73,12 @@
         android:id="@+id/score_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        tools:text="20"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:textSize="30sp"
+        tools:text="20" />
 
 </RelativeLayout>
